@@ -1,0 +1,15 @@
+
+#deprecated
+exclude gtk_entry_new_with_max_length
+exclude gtk_entry_append_text
+exclude gtk_entry_prepend_text
+exclude gtk_entry_set_position
+exclude gtk_entry_select_region
+exclude gtk_entry_set_editable
+
+#these seem like they're only useful internally
+exclude gtk_entry_layout_index_to_text_index
+exclude gtk_entry_text_index_to_layout_index
+exclude gtk_entry_get_layout
+exclude gtk_entry_get_layout_offsets
+
