@@ -1,0 +1,5 @@
+
+#internal functions
+exclude gtk_binary_age
+exclude gtk_interface_age
+exclude gtk_check_version
