@@ -1,0 +1,11 @@
+
+# these functins are totally undocumented
+# I suspect they may be for the frame buffer backend
+exclude gtk_decorated_window
+
+#don't add any new functions to old file slection dialog API
+exclude gtk_file_selection
+
+#can't bind varargs functions, they are only for convenience anyway
+exclude gtk_dialog_add_buttons
+exclude gtk_dialog_new_with_buttons
